added changes for nested routes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "CONTEXT/.",
   "name": "react18.2.0-template-yarn",
   "version": "0.1.0",
   "private": true,
